@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.79">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.80">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -25,9 +25,10 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.79 [20230606]:
-- Fixed a fallback property for Consumet
-- Made a few episode meta changes
+Changelog 0.3.80 [20230607]:
+- Added anilist id when searching simkl for episodes
+- Added notification when meta database is rebuilt
+- Disabled xstreamcdn in gogo
     </news>
   </extension>
 </addon>
