@@ -1,3 +1,8 @@
+Changelog 0.3.80 [20230607]:
+- Added anilist id when searching simkl for episodes
+- Added notification when meta database is rebuilt
+- Disabled xstreamcdn in gogo
+
 Changelog 0.3.79 [20230606]:
 - Fixed a fallback property for Consumet
 - Made a few episode meta changes
